--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "moti": "^0.18.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
